--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
-SECRET_KEY = '...your secret key...'
+SECRET_KEY = 
+AUTH_LDAP_SERVER_URI = 
+AUTH_LDAP_BIND_DN_USER = '<CN|OU>=<UserName>'
+AUTH_LDAP_BIND_PASSWORD = 
+AUTH_LDAP_BINDED_USER_GROUPS = '<CN|OU>=<GroupName>,<CN|OU>=<GroupName>...,<CN|OU>=<GroupName>'
+AUTH_LDAP_HOST = 'example'
+AUTH_LDAP_DOMAIN_COMPONENT = 'com'
+AUTH_LDAP_SEARCH_USERS_IN = '<CN|OU>=<GroupName>,<CN|OU>=<GroupName>...,<CN|OU>=<GroupName>'
